# ha-cloudflare-ai-gateway

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  docker-compose.dev.yml  hacs.json  mise.toml  pyproject.toml
.devcontainer/: configuration.yaml  devcontainer.json
.github/workflows/: lint.yml  release.yml  tests.yml  validate.yml
custom_components/cloudflare_ai_gateway/: __init__.py  ai_task.py  config_flow.py  const.py  conversation.py  coordinator.py  diagnostics.py  entity.py  manifest.json  sensor.py  strings.json
custom_components/cloudflare_ai_gateway/translations/: en.json
scripts/: develop  local-deploy  onboard  release  setup  stamp-version
tests/components/cloudflare_ai_gateway/: conftest.py  test_ai_task.py  test_config_flow.py  test_conversation.py  test_coordinator.py  test_diagnostics.py  test_entity.py  test_init.py  test_sensor.py
